# nest-markets

./: .gitignore  Cargo.toml  POST_DEPLOYMENT.md  Readme.md
apps/indexer/: Cargo.toml  README.md
apps/indexer/src/: api.rs  config.rs  db.rs  main.rs  types.rs  ws.rs
apps/ui/: README.md  UI_THOUGHTS.md  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/ui/src/: config.ts
apps/ui/src/app/: globals.css  head.tsx  layout.tsx  page.tsx
apps/ui/src/app/create/: head.tsx  page.tsx
apps/ui/src/app/markets/: head.tsx  page.tsx
apps/ui/src/app/markets/[id]/: page.tsx
apps/ui/src/app/portfolio/: head.tsx  page.tsx
apps/ui/src/components/: layout-shell.tsx  navigation.tsx  providers.tsx
apps/ui/src/components/markets/: market-card.tsx  position-card.tsx  price-history-chart.tsx  trade-panel.tsx
apps/ui/src/components/ui/: background-paths.tsx  hero-dithering-card.tsx  icons.tsx  prediction-market-card.tsx  probability-bar.tsx  reveal.tsx  status-badge.tsx
apps/ui/src/lib/: format.ts  markets.ts  mock-data.ts  onramp.ts  types.ts
apps/ui/src/types/: pingpay-onramp-types.d.ts
contracts/: Cargo.toml  Readme.md
contracts/crates/market-types/: Cargo.toml
contracts/crates/market-types/src/: lib.rs
contracts/market/: Cargo.toml
contracts/market/src/: amm.rs  events.rs  lib.rs  redemption.rs  resolution.rs  views.rs
contracts/mock-ft/: Cargo.toml
contracts/mock-ft/src/: lib.rs
contracts/outcome-token/: Cargo.toml
contracts/outcome-token/src/: lib.rs
contracts/scripts/: deploy-mainnet.sh  deploy-nusd.sh  deploy.sh  emergency-recover.sh
crates/market-types/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: e2e_market_flow.rs
scripts/: deploy.sh
