[workspace]
resolver = "2"
members = [
    "contracts/market",
    "contracts/outcome-token",
    "contracts/mock-ft",
    "crates/market-types",
    "integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Near SDK
near-sdk = "=5.14.0"
near-contract-standards = "=5.14.0"

# Testing
near-workspaces = { version = "0.22", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internal crates
market-types = { path = "crates/market-types" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
