[package]
name = "nest-markets-indexer"
version = "0.1.0"
edition = "2021"
description = "Event indexer for Nest Markets on NEAR Protocol"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# JSON filter for Intear
json-filter = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
